--- a/clases_udemy/peliculas/views/presupuesto_views.xml
+++ b/clases_udemy/peliculas/views/presupuesto_views.xml
@@ -71,26 +71,47 @@
                         <notebook>
                             <page string="Presupuesto">
                                 <group>
-                                    <field name="num_presupuesto" readonly="1"/>
-                                    <field name="fch_creacion" readonly="1"/>
-                                    <field name="fch_aprobado" readonly="1"/>
-                                </group>
-                                <group>
+                                    <group>
+                                        <field name="num_presupuesto" readonly="1"/>
+                                        <field name="fch_creacion" readonly="1"/>
+                                        <field name="fch_aprobado" readonly="1"/>
+                                    </group>
+                                    <group>
+                                        <field name="currency_id" invisible="1" />
+                                        <field name="campos_ocultos" widget="boolean_toggle"/>
+                                    </group>
                                 </group>
                                 <field name="detalle_ids" widget="tree">
                                     <list editable="bottom">
                                         <control>
                                             <create name="add_product_control" string="Agregar recurso cinematografico"/>
                                         </control>
-                                        <field name="imagen" widget="image" options="{'size': [80, 50]}" optional="show"/>
+                                        <field name="imagen" widget="image" 
+                                               options="{'size': [80, 50], 'preview_image': 'imagen'}" 
+                                               filename="imagen_filename"
+                                               optional="show"/>
                                         <field name="name"/>
-                                        <field name="descripcion" optional="show"/>
-                                        <field name="contacto_id"/>
+                                        <field name="descripcion"/>
+                                        <field name="contacto_id" column_invisible="not parent.campos_ocultos"/>
                                         <field name="cantidad"/>
                                         <field name="precio"/>
-                                        <field name="importe"/>
+                                        <field name="importe" readonly="1" force_save="1"/>
+                                        <field name="currency_id" invisible="1"/>
                                     </list>
                                 </field>
+                                <group col="6" class="mt-2 mt-md-0">
+                                    <group colspan="4">
+                                        <field name="terminos" nolabel="1" placeholder="Terminos y condiciones..."/>
+                                    </group>
+                                    <group class="oe_subtotal_footer oe_right" colspan="2">
+                                        <field name="base" widget="monetary" options="{'currency_field': 'currency_id'}" />
+                                        <field name="impuestos" />
+                                        <div class="oe_subtotal_footer_separator oe_line o_td_label">
+                                            <label for="total"/>
+                                        </div>
+                                        <field name="total" nolabel="1" class="oe_subtotal_footer_separator" widget="monetary" options="{'currency_field': 'currency_id'}" />
+                                    </group>
+                                </group>
                             </page>
                             <page string="Otra información">
                                 <group>
@@ -106,4 +127,19 @@
             </form>
         </field>
     </record>
+
+    <record id="view_presupuesto_tree" model="ir.ui.view">
+        <field name="name">Vista lista de presupuestos de peliculas</field>
+        <field name="model">presupuesto</field>
+        <field name="arch" type="xml">
+            <list>
+                <field name="name"/>
+                <field name="num_presupuesto"/>
+                <field name="fch_creacion"/>
+                <field name="total" sum="Total"/>
+                <field name="state"/>
+            </list>
+        </field>
+    </record>
+
 </odoo>
