--- a/clases_udemy/peliculas/views/menu.xml
+++ b/clases_udemy/peliculas/views/menu.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <odoo>
 
+<!--Peluculas-->
     <record id="action_open_presupuesto" model="ir.actions.act_window">
         <field name="name">Presupuesto</field>
         <field name="res_model">presupuesto</field>
-        <field name="view_mode">list,form</field>
+        <field name="view_mode">list,form,kanban</field>
     </record>
 
     <record id="action_open_recurso_cinematografico" model="ir.actions.act_window">
