--- a/clases_udemy/peliculas/views/presupuesto_views.xml
+++ b/clases_udemy/peliculas/views/presupuesto_views.xml
@@ -8,12 +8,18 @@
                 <header>
                     <button string="Aprobar" type="object" name="aprobar_presupuesto" class="oe_highlight" invisible="state != 'borrador'"/>
                     <button string="Cancelar" type="object" name="cancelar_presupuesto" invisible="state not in ('borrador', 'aprobado')"/>
+                                                      
+                    <button string="Popup" 
+                            type="action" 
+                            name="%(action_open_update_wizard)d" 
+                            invisible="state != 'aprobado'"
+                            groups="peliculas.group_pelicula_administrador"/>
                     <field name="state" widget="statusbar" statusbar_visible="borrador,aprobado"/>
                 </header>
                 <div class="alert alert-info" role="alert" style="margin-bottom: 0px;" invisible="not clasificacion">
                     <field name="dsc_clasificacion" readonly="1" force_save="1"/>
                 </div>
-                    <sheet style="margin-left: 200px; margin-right: 200px; padding-bottom: 200px;">
+                    <sheet>
                     <widget name="web_ribbon" title="Archivado" bg_color="bg-danger"  invisible = "active"  />
                     <field name="image_1920" widget="image" class="oe_avatar" 
                             options="{'preview_image':'image_128','size': ['',128]}" />
@@ -77,8 +83,8 @@
                                         <field name="fch_aprobado" readonly="1"/>
                                     </group>
                                     <group>
-                                        <field name="currency_id" invisible="1" />
-                                        <field name="campos_ocultos" widget="boolean_toggle"/>
+                                        <field name="currency_id" invisible="1" />                 <!-- carpeta.id-->
+                                        <field name="campos_ocultos" widget="boolean_toggle" groups="security.group_pelicula_administrador"/>
                                     </group>
                                 </group>
                                 <field name="detalle_ids" widget="tree">
@@ -128,6 +134,7 @@
         </field>
     </record>
 
+<!-- 
     <record id="view_presupuesto_tree" model="ir.ui.view">
         <field name="name">Vista lista de presupuestos de peliculas</field>
         <field name="model">presupuesto</field>
@@ -136,10 +143,58 @@
                 <field name="name"/>
                 <field name="num_presupuesto"/>
                 <field name="fch_creacion"/>
-                <field name="total" sum="Total"/>
+                <field name="total" sum="importe_total"/>
                 <field name="state"/>
             </list>
         </field>
     </record>
+-->
+    <record id="view_presupuesto_tree" model="ir.ui.view">
+        <field name="name">Vista lista de presupuestos de peliculas</field>
+        <field name="model">presupuesto</field>
+            <field name="arch" type="xml">
+                <list decoration-muted="state == 'cancelado'" decoration-success="state == 'aprobado'" decoration-bf="state == 'borrador'">
+                    <field name="name"/>
+                    <field name="num_presupuesto"/>
+                    <field name="fch_creacion"/>
+                    <field name="currency_id" invisible="1"/>
+                    <field name="total" widget="monetary" options="{'currency_field': 'currency_id'}" sum="importe_total"/>
+                    <field name="state" widget="badge" decoration-success="state == 'aprobado'" decoration-danger="state == 'cancelado'"/>
+                </list>
+            </field>
+    </record>
 
+<record id="view_presupuesto_kanban" model="ir.ui.view">
+    <field name="name">Vista kanban del modelo presupuesto</field>
+    <field name="model">presupuesto</field>
+    <field name="arch" type="xml">
+        <kanban>
+            <field name="id" />
+            <field name="currency_id"/>
+            <templates>
+                <t t-name="kanban-box">
+                    <div class="oe_kanban_global_click">
+                        <div class="o_kanban_image">
+                            <img t-att-src="kanban_image('presupuesto', 'image_128', record.id.raw_value)" class="o_image_64_contain"/>
+                        </div>
+                        <div class="oe_kanban_details">
+                            <strong class="o_kanban_record_title">
+                                <field name="name"/>
+                            </strong>
+                            [<field name="clasificacion"/>]
+                            <div>
+                                <field name="genero_ids"/>
+                            </div>
+                            <div>
+                                <field name="total" widget="monetary" options="{'currency_field': 'currency_id', 'field_digits': True}" />
+                            </div>
+                        </div>
+                    </div>
+                </t>
+            </templates>
+        </kanban>
+    </field>
+</record>
+
+    
 </odoo>
